Added favicons (iconset && auto-detection)
